<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="4dp"
    app:cardElevation="4dp"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/countValue"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:src="@drawable/ic_launcher_background"
            android:text="#11"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/lastCommit"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lastCommit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="23dp"
            android:gravity="center"
            android:src="@drawable/ic_launcher_background"
            android:text="@string/last_commit"
            android:textSize="11sp"
            android:textStyle="italic"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintTop_toBottomOf="@id/countValue" />

        <TextView
            android:id="@+id/repoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/repo_name"
            app:layout_constraintLeft_toRightOf="@+id/countValue" />

        <TextView
            android:id="@+id/repoNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Test"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/barrier1" />

        <TextView
            android:id="@+id/fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fork_counts"
            app:layout_constraintLeft_toRightOf="@+id/countValue"
            app:layout_constraintTop_toBottomOf="@+id/repoName" />

        <TextView
            android:id="@+id/forkValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="Test"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/repoName" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            app:layout_constraintLeft_toRightOf="@+id/countValue"
            app:layout_constraintTop_toBottomOf="@+id/fork" />

        <TextView
            android:id="@+id/languageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="Test"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/fork" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintLeft_toRightOf="@+id/countValue"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:inputType="textMultiLine|textNoSuggestions"
            android:text="Extension for Alfred that will do a Google translate for you"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="description,language,fork,repoName"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="8dp" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>